# hdrmerge

./: .gitignore  CMakeLists.txt  README.md
cmake/: fix_jxl_rpaths.sh
docs/: exposure-normalization-and-dng-metadata.md  hdr-merge-improvements-phase2-research.md  hdr-rendering-improvements-research.md  implementation-plan.md  research-modern-hdr-techniques.md  session-prompt.md  window-masking-and-highlight-recovery-research.md
docs/plans/: 2026-02-21-acr-xmp-profile-design.md  2026-02-21-acr-xmp-profile.md  2026-02-21-streaming-dng-writer-design.md  2026-02-21-streaming-dng-writer.md  2026-02-22-execution-prompt.md  2026-02-22-merge-pipeline-sota-plan.md  2026-02-23-adaptive-highlight-pull-design.md  2026-02-23-adaptive-highlight-pull-impl.md  2026-02-24-neutral-area-wb-design.md  2026-02-24-neutral-area-wb-impl.md
ref/: default_profile.xmp  test-acr-profile.xmp
scripts/: detect_ghost_artifacts.py  safnet_inference.py  safnet_prepare_inputs.py  safnet_windowpull.py
src/: AdaptiveCurves.cpp  AdaptiveCurves.hpp  Bitmap.cpp  Bitmap.hpp  BoxBlur.cpp  DngFloatWriter.cpp  DngFloatWriter.hpp  ExifTransfer.cpp  ExifTransfer.hpp  Image.cpp  Image.hpp  ImageIO.cpp  ImageIO.hpp  ImageStack.cpp  ImageStack.hpp  Launcher.cpp  Launcher.hpp  LoadSaveOptions.hpp  Log.hpp  RawParameters.cpp  RawParameters.hpp  Resizer.cpp  Resizer.hpp
